--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="col-lg-6 hero-content" data-aos="fade-right" data-aos-delay="100">
           <div class="content-wrapper">
             <h1 class="hero-title">* <span class="typed" data-typed-items="Architect, Developer, Leader, Innovator"></span></h1>
-            <p class="lead">I design and build cloud-native, observable, and resilient platforms for banking, payments, and lending using Go, Java, AWS, and modern workflow engines.</p>
             <p class="lead">Leading multiple engineering teams working over UPI, Payments, Rewards, Ad-Roll (Nudges), Experiments</p>
+            <p class="lead">I design and build cloud-native, observable, and resilient platforms for banking, payments, and lending using Go, Java, AWS, and modern workflow engines.</p>
             <div class="hero-stats" data-aos="fade-up" data-aos-delay="200">
               <div class="stat-item">
                 <span class="purecounter" data-purecounter-start="0" data-purecounter-end="19" data-purecounter-duration="2">0</span>
@@ -79,7 +79,7 @@
             </div>
             <div class="hero-actions" data-aos="fade-up" data-aos-delay="300">
               <a href="#resume" class="btn btn-primary">Experience</a>
-              <a href="#portfolio" class="btn btn-primary">View Projects</a>
+              <a href="#portfolio" class="btn btn-outline">View Projects</a>
               <a href="#contact" class="btn btn-outline">Get In Touch</a>
             </div>
             <div class="social-links mt-3" data-aos="fade-up" data-aos-delay="400">
@@ -91,17 +91,17 @@
         <div class="col-lg-6 hero-image" data-aos="fade-left" data-aos-delay="200">
           <div class="image-container">
             <div class="floating-elements">
-              <div class="floating-card card-1" data-aos="zoom-in" data-aos-delay="300">
-                <i class="bi bi-code-slash"></i>
-                <span>Enterprise Architecture</span>
-              </div>
-              <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400">
+              <div class="floating-card card-1" data-aos="zoom-in" data-aos-delay="400">
                 <i class="bi bi-cloud"></i>
                 <span>AWS / K8s</span>
               </div>
-              <div class="floating-card card-3" data-aos="zoom-in" data-aos-delay="500">
+              <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="500">
                 <i class="bi bi-diagram-3"></i>
                 <span>Workflow Engines</span>
+              </div>
+              <div class="floating-card card-3" data-aos="zoom-in" data-aos-delay="300">
+                <i class="bi bi-code-slash"></i>
+                <span>Enterprise Architecture</span>
               </div>
             </div>
             <img src="assets/img/profile/hussain-1.jpeg" alt="Hussain Pithawala" class="img-fluid hero-main-image">
@@ -663,6 +663,36 @@
                 <span class="badge bg-light text-dark border">OpenTelemetry</span>
                 <span class="badge bg-light text-dark border">Prometheus/Grafana</span>
               </div>
+              <div class="table-responsive mt-3">
+                <table class="table table-borderless mb-0">
+                  <thead>
+                  <tr class="text-muted small">
+                    <th>Language</th>
+                    <th>GitHub</th>
+                    <th>Status</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td><strong>Python</strong></td>
+                    <td>
+                      <a href="https://github.com/hussainpithawala/prayog-api" target="_blank">
+                        <i class="bi bi-github"></i> prayog-api
+                      </a>
+                    </td>
+                    <td><span class="badge bg-warning text-dark">Work in Progress</span></td>
+                  </tr>
+                  <!-- Add more rows as you implement -->
+                  <!--
+                  <tr>
+                    <td><strong>Python</strong></td>
+                    <td><i class="bi bi-github"></i> state-machine-amz-py</td>
+                    <td><span class="badge bg-secondary">Planned</span></td>
+                  </tr>
+                  -->
+                  </tbody>
+                </table>
+              </div>
               <a href="https://github.com/hussainpithawala?tab=repositories&q=prayog" target="_blank" class="btn btn-sm btn-outline-primary mt-3">
                 <i class="bi bi-github me-1"></i> All Repositories
               </a>
@@ -718,7 +748,7 @@
                         <i class="bi bi-github"></i> state-machine-amz-ruby
                       </a>
                     </td>
-                    <td><span class="badge bg-warning text-dark">Beta</span></td>
+                    <td><span class="badge bg-success">Stable</span></td>
                   </tr>
                   <!-- Add more rows as you implement -->
                   <!--
