:) not open but still open for leadership challenges

--- a/index.html
+++ b/index.html
@@ -853,8 +853,8 @@
           </div>
         </div>
         <div class="col-lg-7">
-          <p class="text-center">I'm open for leadership challenges/opportunities in technology, feel free to connect!</p>
-          <p class="text-center">Open for Director of Engg. | Principal Architect role in Software development</p>
+<!--          <p class="text-center">I'm open for leadership challenges/opportunities in technology, feel free to connect!</p>-->
+<!--          <p class="text-center">Open for Director of Engg. | Principal Architect role in Software development</p>-->
         </div>
       </div>
     </div>
