fixed broken import of Waypoint.js Also a minor change in rendering name

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
 <body class="index-page">
 <header id="header" class="header d-flex align-items-center fixed-top">
-  <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
-    <a href="/" class="logo d-flex align-items-center">
-      <h1 class="sitename">Hussain Pithawala</h1>
+  <div class="container-fluid  d-flex align-items-center justify-content-between ">
+    <a href="#" class="logo d-flex align-items-center">
+      <h4 class="sitename">Hussain <br/> Pithawala</h4>
     </a>
     <nav id="navmenu" class="navmenu">
       <div class="profile-img">
         <img src="assets/img/profile/hussain-1.jpeg" alt="Hussain Pithawala" class="img-fluid rounded-circle">
       </div>
       <a href="/" class="logo d-flex align-items-center justify-content-center">
-        <h1 class="sitename">Hussain P.</h1>
+        <h1 class="sitename">Hussain Pithawala</h1>
       </a>
       <div class="social-links text-center">
         <a href="https://github.com/hussainpithawala" class="github"><i class="bi bi-github"></i></a>
@@ -133,7 +133,7 @@
         <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
           <div class="about-content">
             <div class="intro">
-              <h2>Hi, I'm Hussain – a Principal Architect</h2>
+              <h2>Hi, I'm Hussain Pithawala – a Principal Architect</h2>
               <p>With 19+ years in software engineering, I specialize in <strong>domain-driven design</strong>, <strong>distributed workflow orchestration</strong>, and <strong>cloud-native architecture</strong> on AWS. I am leading multiple engineering teams for UPI payments, credit-line origination, and real-time notification platforms at scale.</p>
             </div>
             <div class="skills-grid">
@@ -185,13 +185,13 @@
                 <div class="skill-card">
                   <div class="skill-header"><i class="bi bi-code-slash"></i><h3>Languages</h3></div>
                   <div class="skills-animation">
-                    <div class="skill-item"><div class="skill-info"><span>Python</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:90%"></div></div></div>
-                    <div class="skill-item"><div class="skill-info"><span>JavaScript | TypeScript</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:85%"></div></div></div>
-                    <div class="skill-item"><div class="skill-info"><span>Go</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:95%"></div></div></div>
-                    <div class="skill-item"><div class="skill-info"><span>Java</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:90%"></div></div></div>
-                    <div class="skill-item"><div class="skill-info"><span>Ruby</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:85%"></div></div></div>
-                    <div class="skill-item"><div class="skill-info"><span>Erlang | Elixir</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:25%"></div></div></div>
-                    <div class="skill-item"><div class="skill-info"><span>C/C++</span><span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:25%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>Python</span><span class="skill-percentage">100</span></div><div class="skill-bar progress"><div class="progress-bar" style="width:90%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>JavaScript | TypeScript</span>90<span class="skill-percentage"></span></div><div class="skill-bar progress"><div class="progress-bar" style="width:85%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>Go</span><span class="skill-percentage">80</span></div><div class="skill-bar progress"><div class="progress-bar" style="width:95%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>Java</span><span class="skill-percentage">70</span></div><div class="skill-bar progress"><div class="progress-bar" style="width:90%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>Ruby</span><span class="skill-percentage">60</span></div><div class="skill-bar progress"><div class="progress-bar" style="width:85%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>Erlang | Elixir</span><span class="skill-percentage">50</span></div><div class="skill-bar progress"><div class="progress-bar" style="width:25%"></div></div></div>
+                    <div class="skill-item"><div class="skill-info"><span>C/C++</span><span class="skill-percentage">40</span></div><div class="skill-bar progress"><div class="progress-bar" style="width:25%"></div></div></div>
                   </div>
                 </div>
               </div>
@@ -887,6 +887,7 @@
 <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
 <!-- Main JS File -->
 <script src="assets/js/main.js"></script>
