checking in changes for state-machine-amz-py

--- a/index.html
+++ b/index.html
@@ -750,6 +750,15 @@
                     </td>
                     <td><span class="badge bg-success">Stable</span></td>
                   </tr>
+                  <tr>
+                    <td><strong>Python</strong></td>
+                    <td>
+                      <a href="https://github.com/hussainpithawala/state-machine-amz-py" target="_blank">
+                        <i class="bi bi-github"></i> state-machine-amz-py
+                      </a>
+                    </td>
+                    <td><span class="badge bg-success">Stable</span></td>
+                  </tr>
                   <!-- Add more rows as you implement -->
                   <!--
                   <tr>
