added new entries for Gin/Golang, React, and EMV QR Code libraries

--- a/index.html
+++ b/index.html
@@ -742,6 +742,24 @@
                     <td><span class="badge bg-success">Stable</span></td>
                   </tr>
                   <tr>
+                    <td><strong>Gin / Golang </strong></td>
+                    <td>
+                      <a href="https://github.com/hussainpithawala/state-machine-amz-gin" target="_blank">
+                        <i class="bi bi-github"></i> state-machine-amz-gin
+                      </a>
+                    </td>
+                    <td><span class="badge bg-success">Stable</span></td>
+                  </tr>
+                  <tr>
+                    <td><strong>React (Web-Portal) </strong></td>
+                    <td>
+                      <a href="https://github.com/hussainpithawala/state-machine-amz-portal" target="_blank">
+                        <i class="bi bi-github"></i> state-machine-amz-portal
+                      </a>
+                    </td>
+                    <td><span class="badge bg-success">Stable</span></td>
+                  </tr>
+                  <tr>
                     <td><strong>Ruby</strong></td>
                     <td>
                       <a href="https://github.com/hussainpithawala/state-machine-amz-ruby" target="_blank">
@@ -778,8 +796,8 @@
           </div>
         </div>
 
-        <!-- 3. Distributed Circuit Breaker -->
-        <div class="col-lg-12 mt-4">
+        <!-- 3. EMV CO QR Code Implementation -->
+        <div class="col-lg-6 mt-4">
           <div class="card shadow-sm border-0">
             <div class="card-body">
               <div class="d-flex align-items-center mb-3">
@@ -810,6 +828,64 @@
           </div>
         </div>
 
+        <!-- 4. EMV CO QR Code Implementation -->
+        <div class="col-lg-6">
+          <div class="card h-100 shadow-sm border-0">
+            <div class="card-body">
+              <div class="d-flex align-items-center mb-3">
+                <div class="me-3">
+                  <div class="icon-box bg-light rounded p-2">
+                    <i class="bi bi-diagram-3 text-primary"></i>
+                  </div>
+                </div>
+                <div>
+                  <h5 class="fw-bold mb-0">emv-qr-code-*</h5>
+                  <p class="text-muted mb-0">Encoder/Decoder library for EMV® QR Code payloads </p>
+                </div>
+              </div>
+              <p>
+                Encoder/Decoder libraries for EMV® QR Code payloads as defined in the
+                EMV QR Code Specification for Payment Systems (EMV QRCPS) – Merchant-Presented Mode v1.0.
+              </p>
+
+              <div class="table-responsive mt-3">
+                <table class="table table-borderless mb-0">
+                  <thead>
+                  <tr class="text-muted small">
+                    <th>Language</th>
+                    <th>GitHub</th>
+                    <th>Status</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td><strong>Go</strong></td>
+                    <td>
+                      <a href="https://github.com/hussainpithawala/emv-merchant-qr-lib" target="_blank">
+                        <i class="bi bi-github"></i> emv-merchant-qr-lib
+                      </a>
+                    </td>
+                    <td><span class="badge bg-success">Stable</span></td>
+                  </tr>
+                  <tr>
+                    <td><strong>TypeScript</strong></td>
+                    <td>
+                      <a href="https://github.com/hussainpithawala/emv-merchant-qr-lib-ts" target="_blank">
+                        <i class="bi bi-github"></i> emv-merchant-qr-lib-ts
+                      </a>
+                    </td>
+                    <td><span class="badge bg-success">Stable</span></td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <a href="https://github.com/hussainpithawala?tab=repositories&q=emv-merchant-qr-lib" target="_blank" class="btn btn-sm btn-outline-primary mt-3">
+                <i class="bi bi-github me-1"></i> All Repositories
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
