updated contact info section in index.html

--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
               <div class="icon-box"><i class="bi bi-telephone"></i></div>
               <div class="content">
                 <h4>Phone</h4>
-                <p>+91-839-076-5252</p>
+                <p>Please reach out to me on linkedin or email</p>
               </div>
             </div>
             <div class="info-item">
